@@ -1,3 +1,4 @@
+* Limit cost method to fixed for service
 * Move cost_price from Template to Product
 
 Version 4.4.0 - 2017-05-01
